--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3001"
+  "proxy": "http://localhost:3001",
+  "devDependencies": {
+    "prettier-eslint-cli": "^5.0.0"
+  }
 }
