--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "eslint": "eslint .",
-    "cypress:open": "cypress open",
-    "test:e2e": "cypress run"
+    "eslint": "eslint ."
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -36,10 +34,8 @@
   },
   "proxy": "http://localhost:3001",
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
-    "cypress": "^6.2.0",
-    "eslint-plugin-cypress": "^2.11.2",
     "eslint-plugin-jest": "^24.1.3",
     "prettier-eslint-cli": "^5.0.0"
   }
